--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -55,6 +55,10 @@
       <artifactId>spring-boot-starter-web</artifactId>
       <exclusions>
         <exclusion>
+          <groupId>org.apache.tomcat.embed</groupId>
+          <artifactId>tomcat-embed-el</artifactId>
+        </exclusion>
+        <exclusion>
           <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
           </exclusion>
@@ -115,13 +119,13 @@
     <dependency>
       <groupId>org.elasticsearch</groupId>
       <artifactId>elasticsearch</artifactId>
-      <version>1.7.4</version>
+      <version>2.1.2</version>
     </dependency>
 
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-all</artifactId>
-      <version>2.4.4</version>
+      <version>2.4.6</version>
     </dependency>
 
     <dependency>
