--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -21,6 +21,7 @@ analyst.path.index=${analyst.path.home}/index
 analyst.path.models=${analyst.path.home}/models
 
 server.port = 8099
+server.address=127.0.0.1
 server.devices=eth0,eth1,wlan0,en0,en1
 server.ssl.enabled = true
 server.ssl.key-store = classpath:keystore.p12
