--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -7,6 +7,7 @@ info.build.description=@project.description@
 info.build.version=@project.version@
 
 server.port=8066
+server.address=127.0.0.1
 server.session.timeout=3000
 
 server.ssl.enabled = true
