--- a/Archivist/src/main/resources/db/mappings/V5__mapping.json
+++ b/Archivist/src/main/resources/db/mappings/V5__mapping.json
@@ -205,7 +205,7 @@
         },
         {
           "location_template": {
-            "match": ".+Location$|^location$|^shape$",
+            "match": "^.+Location$|^location$|^shape$",
             "mapping": {
               "type": "geo_shape"
             }
