--- a/Archivist/src/main/resources/db/mappings/V5__mapping.json
+++ b/Archivist/src/main/resources/db/mappings/V5__mapping.json
@@ -23,6 +23,11 @@
         "path_analyzer" : {
           "type" : "custom",
           "tokenizer" : "path_tokenizer"
+        },
+        "trim_analyzer" : {
+          "type" : "custom",
+          "tokenizer" : "keyword",
+          "filter" : "trim"
         }
       },
       "filter": {
@@ -220,7 +225,8 @@
               "fields": {
                 "raw": {
                   "type": "string",
-                  "index": "not_analyzed"
+                  "index": "not_analyzed",
+                  "analyzer": "trim_analyzer"
                 }
               }
             }
