Moved the FileSystem implementation to the Analyst so it can use the transferservice, or any other internal depends it needs.

--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -12,7 +12,7 @@ analyst.master.host = https://127.0.0.1:8066
 zorroa.common.index.alias=archivist
 zorroa.common.index.port=9401
 
-analyst.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
+analyst.filesystem.class = com.zorroa.analyst.filesystem.UUIDFileSystem
 analyst.filesystem.root = ${analyst.path.home}/storage
 
 analyst.index.data=true
