Mapping: set raw mapping back to raw

--- a/Archivist/src/main/resources/db/mappings/V5__mapping.json
+++ b/Archivist/src/main/resources/db/mappings/V5__mapping.json
@@ -225,8 +225,7 @@
               "fields": {
                 "raw": {
                   "type": "string",
-                  "index": "not_analyzed",
-                  "analyzer": "trim_analyzer"
+                  "index": "not_analyzed"
                 }
               }
             }
