Default config: set undertow logging to warn so we can see request exceptions.

--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -30,7 +30,7 @@ logging.level.com.googlecore.flyway=DEBUG
 #
 # Turn off logging from undertow, we'll log exceptions on our own.
 #
-logging.level.io.undertow.request=OFF
+logging.level.io.undertow.request=warn
 
 spring.jackson.serialization-inclusion:non_null
 
