Added a service for general maintenance operations, the first one being a live backup of the SQL DB. The files are written to a configurable location but default to a 'backups' folder within the archvist directory structure.

--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -45,6 +45,7 @@ zorroa.common.index.port=9401
 archivist.path.home=.
 archivist.path.db=${archivist.path.home}/db/archivist
 archivist.path.index=${archivist.path.home}/index
+archivist.path.backups=${archivist.path.home}/backups
 
 archivist.datasource.primary.url=jdbc:h2:${archivist.path.db};DB_CLOSE_DELAY=-1;
 archivist.datasource.primary.driver-class-name=org.h2.Driver
