--- a/analyst/pom.xml
+++ b/analyst/pom.xml
@@ -17,14 +17,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>com.zorroa.analyst.Application</start-class>
         <java.version>1.8</java.version>
-        <geotools.version>13.2</geotools.version>
     </properties>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.3.RELEASE</version>
-    </parent>
+  <parent>
+      <relativePath>../pom.xml</relativePath>
+      <groupId>com.zorroa</groupId>
+      <artifactId>zorroa-server</artifactId>
+      <version>0.19.0</version>
+  </parent>
 
     <dependencies>
 
@@ -70,7 +70,6 @@
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
-            <version>2.1.2</version>
         </dependency>
 
         <!--
@@ -82,31 +81,26 @@
         <dependency>
             <groupId>com.vividsolutions</groupId>
             <artifactId>jts</artifactId>
-            <version>1.13</version>
         </dependency>
 
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
-            <version>4.2.2</version>
         </dependency>
 
         <dependency>
             <groupId>com.zorroa</groupId>
-            <artifactId>archivist-sdk</artifactId>
-            <version>0.19.0</version>
+            <artifactId>sdk</artifactId>
         </dependency>
 
         <dependency>
             <groupId>com.zorroa</groupId>
-            <artifactId>archivist-common</artifactId>
-            <version>0.19</version>
+            <artifactId>common</artifactId>
         </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>18.0</version>
         </dependency>
 
         <dependency>
@@ -235,15 +229,15 @@
     <build>
 
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <finalName>analyst</finalName>
-                </configuration>
-            </plugin>
-
-
+          <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>${spring-boot.version}</version>
+            <configuration>
+                <mainClass>${start-class}</mainClass>
+                <finalName>archivist</finalName>
+            </configuration>
+          </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
