--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -8,13 +8,14 @@
   <version>0.19.0</version>
   <packaging>jar</packaging>
 
-  <name>zorroa-archivist</name>
+  <name>archivist</name>
   <description>Zorroa Platform Application Server</description>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-     <artifactId>spring-boot-starter-parent</artifactId>
-     <version>1.3.3.RELEASE</version>
+      <relativePath>../pom.xml</relativePath>
+      <groupId>com.zorroa</groupId>
+      <artifactId>zorroa-server</artifactId>
+      <version>0.19.0</version>
   </parent>
 
   <properties>
@@ -23,16 +24,15 @@
     <java.version>1.8</java.version>
   </properties>
   <dependencies>
+
     <dependency>
       <groupId>com.zorroa</groupId>
-      <artifactId>archivist-sdk</artifactId>
-      <version>0.19.0</version>
+      <artifactId>sdk</artifactId>
     </dependency>
 
     <dependency>
       <groupId>com.zorroa</groupId>
-      <artifactId>archivist-common</artifactId>
-      <version>0.19</version>
+      <artifactId>common</artifactId>
     </dependency>
 
     <dependency>
@@ -99,7 +99,6 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>18.0</version>
     </dependency>
 
     <dependency>
@@ -117,21 +116,18 @@
     <dependency>
       <groupId>org.elasticsearch</groupId>
       <artifactId>elasticsearch</artifactId>
-      <version>2.1.2</version>
     </dependency>
 
     <!-- Elastic is faster with this library -->
     <dependency>
       <groupId>net.java.dev.jna</groupId>
       <artifactId>jna</artifactId>
-      <version>4.2.2</version>
     </dependency>
 
     <!-- Necessary for Elastic geometric types -->
     <dependency>
       <groupId>com.vividsolutions</groupId>
       <artifactId>jts</artifactId>
-      <version>1.13</version>
     </dependency>
 
     <dependency>
@@ -156,12 +152,13 @@
 
   <build>
     <plugins>
-
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring-boot.version}</version>
         <configuration>
-          <finalName>archivist</finalName>
+            <mainClass>${start-class}</mainClass>
+            <finalName>archivist</finalName>
         </configuration>
       </plugin>
 
