--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -19,6 +19,7 @@ analyst.index.data=true
 analyst.path.home=.
 analyst.path.index=${analyst.path.home}/index
 analyst.path.models=${analyst.path.home}/models
+analyst.path.plugins=${analyst.path.home}/plugins
 
 server.port = 8099
 server.address=127.0.0.1
