Analyst: fixes issues with building the distribution.

--- a/analyst/pom.xml
+++ b/analyst/pom.xml
@@ -125,8 +125,15 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>${start-class}</mainClass>
-                    <finalName>archivist</finalName>
+                    <finalName>analyst</finalName>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -137,15 +144,6 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <version>2.6</version>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <finalName>${project.artifactId}</finalName>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
