--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -17,6 +17,8 @@ analyst.path.index=${analyst.path.home}/index
 analyst.path.models=${analyst.path.home}/models
 analyst.path.plugins=${analyst.path.home}/plugins
 
+analyst.plugins.enabled = true
+
 server.port = 8099
 server.address=127.0.0.1
 server.devices=eth0,eth1,wlan0,en0,en1
