--- a/analyst/src/test/resources/test.properties
+++ b/analyst/src/test/resources/test.properties
@@ -2,3 +2,6 @@ server.port = 8099
 
 analyst.path.index=unittest/index
 analyst.filesystem.root = unittest/storage
+
+analyst.path.plugins = src/test/resources/plugins
+analyst.plugins.enabled = false
